tests/models/enum/named/u16/pass/default.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(default = 1)]
        u16
    ),
}
fn main() {}
